--- a/pages/11386.html
+++ b/pages/11386.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5801/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -433,7 +431,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+cohomology'>etale cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+cohomology'>etale cohomology</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/group+of+units'>group of units</a>, <a class='existingWikiWord' href='/nlab/show/Picard+group'>Picard group</a>, <a class='existingWikiWord' href='/nlab/show/Brauer+group'>Brauer group</a></li>
@@ -527,7 +525,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>Čech cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+cohomology'>?ech cohomology</a></p>
 </li>
 
 <li>
@@ -669,7 +667,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincare+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/de+Rham+theorem'>de Rham theorem</a>, <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+lemma'>Poincare lemma</a>, <a class='existingWikiWord' href='/nlab/show/Stokes+theorem'>Stokes theorem</a></p>
 </li>
 
 <li>
@@ -980,20 +978,20 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/prime+number'>prime number</a>, givem <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> write <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math> for the coresponding <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> and write <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>L_{K(n)}(-)</annotation></semantics></math> for <a class='existingWikiWord' href='/nlab/show/K%28n%29-local+stable+homotopy+theory'>K(n)-localization</a> of spectra.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/prime+number'>prime number</a>, given <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> write <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math> for the coresponding <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> and write <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>L_{K(n)}(-)</annotation></semantics></math> for <a class='existingWikiWord' href='/nlab/show/K%28n%29-local+stable+homotopy+theory'>K(n)-localization</a> of spectra.</p>
 
-<p>The <em>Bousfield-Kuhn functor</em> <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi></mrow><annotation encoding='application/x-tex'>\Phi</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> from <a class='existingWikiWord' href='/nlab/show/pointed+object'>pointed</a> <a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy types</a> to <a class='existingWikiWord' href='/nlab/show/spectrum'>spectra</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo>∈</mo><mn>∞</mn><msub><mi>Grpd</mi> <mo>*</mo></msub><mo>⟶</mo><mi>Spectra</mi></mrow><annotation encoding='application/x-tex'>
+<p>The <em>Bousfield-Kuhn functor</em> <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi></mrow><annotation encoding='application/x-tex'>\Phi</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> from <a class='existingWikiWord' href='/nlab/show/pointed+object'>pointed</a> <a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy types</a> to <a class='existingWikiWord' href='/nlab/show/spectrum'>spectra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mo>∈</mo><mn>∞</mn><msub><mi>Grpd</mi> <mo>*</mo></msub><mo>⟶</mo><mi>Spectra</mi></mrow><annotation encoding='application/x-tex'>
   \Phi \;\colon\; \in \infty Grpd_\ast \longrightarrow Spectra
 
 </annotation></semantics></math></div>
 <p>such that there is a <a class='existingWikiWord' href='/nlab/show/natural+equivalence'>natural equivalence</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><mo stretchy='false'>(</mo><msup><mi>Ω</mi> <mn>∞</mn></msup><mi>Y</mi><mo stretchy='false'>)</mo><mo>≃</mo><msub><mi>L</mi> <mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>Y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><mo stretchy='false'>(</mo><msup><mi>Ω</mi> <mn>∞</mn></msup><mi>Y</mi><mo stretchy='false'>)</mo><mo>≃</mo><msub><mi>L</mi> <mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>Y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \Phi(\Omega^\infty Y ) \simeq L_{K(n)}(Y)
 
 </annotation></semantics></math></div>
 <p>and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>Φ</mi><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>≃</mo><msubsup><mi>v</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>Φ</mi><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>≃</mo><msubsup><mi>v</mi> <mi>n</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msubsup><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \pi_\bullet \Phi(X) \simeq v_n^{-1} \pi_\bullet(X)
   \,.
 
@@ -1029,7 +1027,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Nathaniel+Stapleton'>Nat Stapleton</a>, <em>Power operations and the Bousfield-Kuhn functro</em>, in <em>Report of <math class='maruku-mathml' display='inline' id='mathml_5a1a54e05884d7ef0816ee546204b914c291cc22_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math>-theory conjectures seminar</em> (2013) (<a href='http://math.berkeley.edu/~ericp/latex/misc/mit-ethy.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Nathaniel+Stapleton'>Nat Stapleton</a>, <em>Power operations and the Bousfield-Kuhn functro</em>, in <em>Report of <math class='maruku-mathml' display='inline' id='mathml_80b7ff4922738f5998548ae4c4c7e51615e06a52_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math>-theory conjectures seminar</em> (2013) (<a href='http://math.berkeley.edu/~ericp/latex/misc/mit-ethy.pdf'>pdf</a>)</li>
 </ul>
 
 <p>The relation to <a class='existingWikiWord' href='/nlab/show/topological+Andr%C3%A9-Quillen+homology'>topological André-Quillen cohomology</a> is discussed in</p>
@@ -1059,19 +1057,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 26, 2014 03:11:19 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.37.147.12)
+  <p>
+  Last revised on April 21, 2018 at 08:12:18.
+  See the <a href="https://ncatlab.org/nlab/history/Bousfield-Kuhn functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bousfield-Kuhn+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield-Kuhn+functor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bousfield-Kuhn+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield-Kuhn+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Bousfield-Kuhn+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield-Kuhn+functor/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Bousfield-Kuhn+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield-Kuhn+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Bousfield-Kuhn+functor" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Bousfield-Kuhn+functor" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Bousfield-Kuhn+functor" id="view_source" rel="nofollow">Source</a>
