--- a/pages/5789.html
+++ b/pages/5789.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2573/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -377,7 +375,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><span class='newWikiWord'>Reshetikhin?Turaev model<a href='/nlab/new/Reshetikhin%3FTuraev+model'>?</a></span> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
 </li>
 
 <li>
@@ -510,7 +508,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -605,7 +603,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -843,7 +841,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1271,18 +1269,18 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#RelationToSpinningParticles'>Relation to spinning particles</a></li><li><a href='#RelationToIndexTheory'>Relation to index theory</a></li><li><a href='#relation_to_morse_theory'>Relation to Morse theory</a></li><li><a href='#RelationToSuperstrings'>Relation to superstrings</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#References'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#ReferencesRelationToMorseTheory'>Relation to Morse theory</a></li><li><a href='#ReferencesRelationToIndexTheory'>Relation to index theory</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#RelationToSpinningParticles'>Relation to spinning particles</a></li><li><a href='#RelationToIndexTheory'>Relation to index theory</a></li><li><a href='#relation_to_morse_theory'>Relation to Morse theory</a></li><li><a href='#RelationToSuperstrings'>Relation to superstrings</a></li></ul></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#References'>References</a><ul><li><a href='#ReferencesGeneral'>General</a></li><li><a href='#ReferencesRelationToMorseTheory'>Relation to Morse theory</a></li><li><a href='#ReferencesRelationToIndexTheory'>Relation to index theory</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>Where a system of <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> is specified by</p>
 
 <ul>
 <li>
-<p>a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>;</p>
+<p>a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>;</p>
 </li>
 
 <li>
-<p>a <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>hermitean operator</a> <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math> – the <a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a>;</p>
+<p>a <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>hermitean operator</a> <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math> – the <a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a>;</p>
 </li>
 </ul>
 
@@ -1290,19 +1288,19 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>a <a class='existingWikiWord' href='/nlab/show/super+Hilbert+space'>super Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>;</p>
+<p>a <a class='existingWikiWord' href='/nlab/show/super+Hilbert+space'>super Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>;</p>
 </li>
 
 <li>
-<p>an odd <a class='existingWikiWord' href='/nlab/show/linear+map'>linear operator</a> <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/supercharge'>supercharge</a></p>
+<p>an odd <a class='existingWikiWord' href='/nlab/show/linear+map'>linear operator</a> <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/supercharge'>supercharge</a></p>
 </li>
 
 <li>
-<p>such that <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>∘</mo><mi>D</mi><mo>=</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>D \circ D = H</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a>.</p>
+<p>such that <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>∘</mo><mi>D</mi><mo>=</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>D \circ D = H</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a>.</p>
 </li>
 </ul>
 
-<p>If we regard the Hamiltonian as the generator of the <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincare Lie algebra</a> in one dimension – the <a class='existingWikiWord' href='/nlab/show/super-translation+group'>super translation Lie algebra</a> –, then the graded commutator <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>D</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>]</mo><mo>=</mo><mn>2</mn><mi>H</mi></mrow><annotation encoding='application/x-tex'>[D,D] = 2 H</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a> extension to the <a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a> in super-dimension <math class='maruku-mathml' display='inline' id='mathml_a2c31640c0393991908a3f3a474bdc90a81a73cd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(1|1)</annotation></semantics></math>.</p>
+<p>If we regard the Hamiltonian as the generator of the <a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincare Lie algebra</a> in one dimension – the <a class='existingWikiWord' href='/nlab/show/super-translation+group'>super translation Lie algebra</a> –, then the graded commutator <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>D</mi><mo>,</mo><mi>D</mi><mo stretchy='false'>]</mo><mo>=</mo><mn>2</mn><mi>H</mi></mrow><annotation encoding='application/x-tex'>[D,D] = 2 H</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a> extension to the <a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a> in super-dimension <math class='maruku-mathml' display='inline' id='mathml_d0cc22915e92e0e5fda41ab86052692a692c53d2_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>|</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(1|1)</annotation></semantics></math>.</p>
 
 <p>The data of a system of supersymmetric quantum mechanics may also be formalized in terms of a <a class='existingWikiWord' href='/nlab/show/spectral+triple'>spectral triple</a>.</p>
 
@@ -1348,7 +1346,7 @@ margin-left: 0em;
 
 <h2 id='References'>References</h2>
 
-<h3 id='general'>General</h3>
+<h3 id='ReferencesGeneral'>General</h3>
 
 <p>A fairly comprehensive survey and discussion of supersymmetric quantum mechanics as such, with emphasis on its relation to <a class='existingWikiWord' href='/nlab/show/spectral+geometry'>spectral geometry</a> (“<a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>noncommutative geometry</a>”) is in</p>
 
@@ -1440,19 +1438,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 21, 2017 05:49:02 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on April 22, 2018 at 05:52:19.
+  See the <a href="https://ncatlab.org/nlab/history/supersymmetric quantum mechanics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supersymmetric+quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetric+quantum+mechanics/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/supersymmetric+quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetric+quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/supersymmetric+quantum+mechanics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetric+quantum+mechanics/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/supersymmetric+quantum+mechanics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetric+quantum+mechanics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/supersymmetric+quantum+mechanics" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/supersymmetric+quantum+mechanics" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/supersymmetric+quantum+mechanics" id="view_source" rel="nofollow">Source</a>
