--- a/pages/2512.html
+++ b/pages/2512.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1428/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +306,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Hisham Sati (<a href='http://www.mathematics.pitt.edu/person/hisham-sati'>website</a>) is working on <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> phenomena in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>/<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> using tools of <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>. His thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Michael Duff</a>.</p>
+    <p>Hisham Sati (<a href='https://nyuad.nyu.edu/en/academics/divisions/science/faculty/hisham-ahmad-sati.html'>website</a>) is working on <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> phenomena in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>/<a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> using tools of <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a> and <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>. His thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Michael Duff</a>.</p>
 
 <p>Hisham Sati is assistant professor in the Mathematics Department at Pittsburgh University.</p>
 
@@ -332,7 +330,7 @@ margin-left: 0em;
 
 <p>part I, Proc. Symp. Pure Math. 81 (2010), 181-236 (<a href='http://arXiv.org/abs/1001.5020'>arXiv:1001.5020</a>),</p>
 
-<p>part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_a4b1d02858463521d1589e4244d1b2c1312fe68c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_a4b1d02858463521d1589e4244d1b2c1312fe68c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em>, J. Australian Math. Soc. 90 (2011), 93-108 (<a href='http://arxiv.org/abs/1007.5419'>arXiv:1007.5419</a>);</p>
+<p>part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em>, J. Australian Math. Soc. 90 (2011), 93-108 (<a href='http://arxiv.org/abs/1007.5419'>arXiv:1007.5419</a>);</p>
 
 <p>part <em>III: Twisted higher structures</em>, Int. J. Geom. Meth. Mod. Phys. 8 (2011), 1097-1116 (<a href='http://arxiv.org/abs/1008.1755'>arXiv:1008.1755</a>)</p>
 </li>
@@ -357,7 +355,7 @@ margin-left: 0em;
 <p>On <a class='existingWikiWord' href='/nlab/show/F4'>F4</a> and <a class='existingWikiWord' href='/nlab/show/Cayley+plane'>Cayley plane</a>-<a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundles</a> in <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a>:</p>
 
 <ul>
-<li>H.S. <em><math class='maruku-mathml' display='inline' id='mathml_a4b1d02858463521d1589e4244d1b2c1312fe68c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝕆</mi><msup><mi>P</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{O}P^2</annotation></semantics></math>-bundles in M-theory</em>, Commun. Num. Theor. Phys 3:495-530,2009 (<a href='http://arxiv.org/abs/0807.4899'>arXiv:0807.4899</a>)</li>
+<li>H.S. <em><math class='maruku-mathml' display='inline' id='mathml_e59a4e9da6fdcc0942b888c214902a7fefb41f99_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝕆</mi><msup><mi>P</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{O}P^2</annotation></semantics></math>-bundles in M-theory</em>, Commun. Num. Theor. Phys 3:495-530,2009 (<a href='http://arxiv.org/abs/0807.4899'>arXiv:0807.4899</a>)</li>
 </ul>
 
 <p>On mathematical foundations of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> and <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>:</p>
@@ -424,19 +422,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 26, 2016 03:14:33 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (194.210.233.114)
+  <p>
+  Last revised on April 22, 2018 at 16:34:12.
+  See the <a href="https://ncatlab.org/nlab/history/Hisham Sati" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hisham+Sati" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hisham+Sati/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Hisham+Sati" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hisham+Sati" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Hisham+Sati" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hisham+Sati/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Hisham+Sati" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hisham+Sati" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Hisham+Sati" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Hisham+Sati" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Hisham+Sati" id="view_source" rel="nofollow">Source</a>
