--- a/pages/2277.html
+++ b/pages/2277.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8466/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -384,11 +382,11 @@ margin-left: 0em;
 
 <p>(Bois Marie is the name of an area of woodland at Bures-sur-Yvette, where the <a class='existingWikiWord' href='/nlab/show/math+institutions'>IHÉS</a> is situated.)</p>
 
-<p><em>SGA</em> consists of the writeups of seminars at IHÉS lead by Grothendieck; the work of the members of the seminar under the guidance of Grothendieck are included. In <math class='maruku-mathml' display='inline' id='mathml_97c91ad9b359cec752b18aea6adbc8e6485e0e43_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab we have pages on <a class='existingWikiWord' href='/nlab/show/SGA1'>SGA1</a>, and <a class='existingWikiWord' href='/nlab/show/SGA4'>SGA4</a>.</p>
+<p><em>SGA</em> consists of the writeups of seminars at IHÉS lead by Grothendieck; the work of the members of the seminar under the guidance of Grothendieck are included. In <math class='maruku-mathml' display='inline' id='mathml_d7c82a137e9040e92a80acb33b8c553acbea735c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab we have pages on <a class='existingWikiWord' href='/nlab/show/SGA1'>SGA1</a>, and <a class='existingWikiWord' href='/nlab/show/SGA4'>SGA4</a>.</p>
 
 <p>The <a href='http://en.wikipedia.org/wiki/S%C3%A9minaire_de_G%C3%A9om%C3%A9trie_Alg%C3%A9brique_du_Bois_Marie'>Wikipedia entry</a> lists all of the seminars.</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a> edited a supplementary volume <em>SGA <math class='maruku-mathml' display='inline' id='mathml_97c91ad9b359cec752b18aea6adbc8e6485e0e43_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>4</mn><mfrac><mn>1</mn><mn>2</mn></mfrac></mrow><annotation encoding='application/x-tex'>4\frac{1}{2}</annotation></semantics></math></em> comprisings parts of <span class='newWikiWord'>SGA5<a href='/nlab/new/SGA5'>?</a></span>, his own articles proving new results and some substantially rewritten and expanded material exposed in less satisfactory form in SGA5 (these results were used for his proof of the <a class='existingWikiWord' href='/nlab/show/Weil+conjectures'>Weil conjecture</a>s which appeared before SGA5).</p>
+<p><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a> edited a supplementary volume <em>SGA <math class='maruku-mathml' display='inline' id='mathml_d7c82a137e9040e92a80acb33b8c553acbea735c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>4</mn><mfrac><mn>1</mn><mn>2</mn></mfrac></mrow><annotation encoding='application/x-tex'>4\frac{1}{2}</annotation></semantics></math></em> comprisings parts of <span class='newWikiWord'>SGA5<a href='/nlab/new/SGA5'>?</a></span>, his own articles proving new results and some substantially rewritten and expanded material exposed in less satisfactory form in SGA5 (these results were used for his proof of the <a class='existingWikiWord' href='/nlab/show/Weil+conjectures'>Weil conjecture</a>s which appeared before SGA5).</p>
 
 <p>An ongoing project aims to retype the SGA volumes in TeX. So far the following volumes have been retyped:</p>
 
@@ -400,6 +398,8 @@ margin-left: 0em;
 <li><a href='http://webusers.imj-prg.fr/~patrick.polo/SGA3/'>SGA 3</a> - Edited by P. Gilles and P. Polo, 2011</li>
 
 <li>SGA 4 - Edited by Y. Laszlo. <a href='http://www.math.polytechnique.fr/~laszlo/sga4/SGA4-1/sga41.pdf'>Part 1</a>, <a href='http://www.math.polytechnique.fr/~laszlo/sga4/SGA4-2/sga42.pdf'>Part 2</a>, <a href='http://www.math.polytechnique.fr/~laszlo/sga4/SGA4-3/sga43.pdf'>Part 3</a>.</li>
+
+<li><a href='https://github.com/dkmiller/sga4.5'>SGA <math class='maruku-mathml' display='inline' id='mathml_d7c82a137e9040e92a80acb33b8c553acbea735c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>4</mn><mfrac><mrow><mn>1</mn></mrow><mrow><mn>2</mn></mrow></mfrac></mrow><annotation encoding='application/x-tex'>4{1\over2}</annotation></semantics></math></a> - Edited by Daniel Miller.</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -463,19 +463,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 18, 2016 15:36:16 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  <p>
+  Last revised on April 22, 2018 at 19:16:30.
+  See the <a href="https://ncatlab.org/nlab/history/EGA" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/EGA" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/EGA/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/EGA" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/EGA" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/EGA" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/EGA/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/EGA" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/EGA" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/EGA" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/EGA" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/EGA" id="view_source" rel="nofollow">Source</a>
