--- a/pages/10824.html
+++ b/pages/10824.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -309,10 +307,10 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://de.wikipedia.org/wiki/Günter_Tamme'>Wikipedia entry</a></li>
+<li><a href='http://de.wikipedia.org/wiki/G&amp;#252;nter_Tamme'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='bookd'>Bookd</h2>
+<h2 id='books'>Books</h2>
 
 <ul>
 <li><em><a class='existingWikiWord' href='/nlab/show/Introduction+to+%C3%89tale+Cohomology'>Introduction to Étale Cohomology</a></em></li>
@@ -322,19 +320,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 24, 2013 07:48:44 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.79)
+  <p>
+  Last revised on April 23, 2018 at 00:02:15.
+  See the <a href="https://ncatlab.org/nlab/history/Günter Tamme" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/G%C3%BCnter+Tamme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/G%C3%BCnter+Tamme" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G%C3%BCnter+Tamme/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/G%C3%BCnter+Tamme" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G%C3%BCnter+Tamme" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
+  | <a href="https://ncatlab.org/nlab/show/Günter Tamme/cite" style="color: black">Cite</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/G%C3%BCnter+Tamme" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/G%C3%BCnter+Tamme" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/G%C3%BCnter+Tamme" id="view_source" rel="nofollow">Source</a>
