--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -304,34 +304,50 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+    <p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><mo stretchy='false'>)</mo><mo>+</mo><mo stretchy='false'>(</mo><mn>1</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>
-  x^2(2 - x^2) + (1 - x^2)^2  = 1
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><munder><munder><mrow><msub><mi>e</mi> <mn>1</mn></msub><msub><mi>e</mi> <mn>2</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>4</mn></msub></mrow></munder><msub><mi>e</mi> <mn>3</mn></msub><msub><mi>e</mi> <mn>4</mn></msub><msub><mi>e</mi> <mn>5</mn></msub><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><munder><munder><mrow><msub><mi>e</mi> <mn>4</mn></msub><msub><mi>e</mi> <mn>3</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>6</mn></msub></mrow></munder><msub><mi>e</mi> <mn>4</mn></msub><msub><mi>e</mi> <mn>5</mn></msub><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><munder><munder><mrow><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>4</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>3</mn></msub></mrow></munder><msub><mi>e</mi> <mn>5</mn></msub><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><munder><munder><mrow><msub><mi>e</mi> <mn>3</mn></msub><msub><mi>e</mi> <mn>5</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>2</mn></msub></mrow></munder><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><munder><munder><mrow><msub><mi>e</mi> <mn>2</mn></msub><msub><mi>e</mi> <mn>6</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>7</mn></msub></mrow></munder><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>e</mi> <mn>7</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    &amp; \underset{e_4}{\underbrace{e_1 e_2}} e_3 e_4 e_5 e_6 e_7
+    \\
+    &amp; = \underset{- e_6}{\underbrace{e_4 e_3}} e_4 e_5 e_6 e_7
+    \\
+    &amp; = - \underset{-e_3}{\underbrace{ e_6 e_4 }} e_5 e_6 e_7
+    \\
+    &amp; = + \underset{e_2}{\underbrace{ e_3 e_5 }} e_6 e_7
+    \\
+    &amp; = + \underset{ e_7 }{\underbrace{ e_2 e_6 }} e_7
+    \\
+    &amp; = e_7 e_7 
+    \\
+    &amp; = - 1
+  \end{aligned}
 
 </annotation></semantics></math></div>
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_464e73ec6ee1dfd267075f2e7f6f097a2c644a71_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_93eb1ba4c25774084716e612b65814ca469e2f8d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 19, 2018 at 17:48:03.
+  Last revised on April 23, 2018 at 05:29:08.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1486" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1486 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1487" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1487 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
+  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
 
   <span class="views">
     | Views:
