--- a/pages/19398.html
+++ b/pages/19398.html
@@ -441,12 +441,20 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#spherical_space_forms'>Spherical space forms</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The possible <a class='existingWikiWord' href='/nlab/show/action'>actions</a> of well-behaved <a class='existingWikiWord' href='/nlab/show/topological+group'>topological groups</a> (such as <a class='existingWikiWord' href='/nlab/show/compact+Lie+group'>compact Lie groups</a>) on <a class='existingWikiWord' href='/nlab/show/topological+space'>topological</a> or <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth</a> <a class='existingWikiWord' href='/nlab/show/sphere'>n-spheres</a> display various interesting patterns in their classification.</p>
 
 <p>This entry is meant to eventually list and discuss some of these. For the moment it mainly just collects some references.</p>
+
+<h2 id='spherical_space_forms'>Spherical space forms</h2>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete group</a> and <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ρ</mi></mrow><annotation encoding='application/x-tex'>\rho</annotation></semantics></math> an <a class='existingWikiWord' href='/nlab/show/action'>action</a> of <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/sphere'>n-sphere</a> by <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a>, which is <a class='existingWikiWord' href='/nlab/show/free+action'>free</a> and <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuous</a>.</p>
+
+<p>The induced <a class='existingWikiWord' href='/nlab/show/quotient+space'>quotient spaces</a> <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>S^n/G</annotation></semantics></math> in this case are also called <em><span class='newWikiWord'>spherical space forms<a href='/nlab/new/spherical+space+forms'>?</a></span></em>.</p>
+
+<p>(…)</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -459,7 +467,7 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>either it is the <a class='existingWikiWord' href='/nlab/show/0-sphere'>0-sphere</a> <math class='maruku-mathml' display='inline' id='mathml_ac4efcb15d56b84c29437007f750f3e09f8518c6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>0</mn></msup><mo>↪</mo><msup><mi>S</mi> <mn>4</mn></msup></mrow><annotation encoding='application/x-tex'>S^0 \hookrightarrow S^4</annotation></semantics></math></p>
+<p>either it is the <a class='existingWikiWord' href='/nlab/show/0-sphere'>0-sphere</a> <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>0</mn></msup><mo>↪</mo><msup><mi>S</mi> <mn>4</mn></msup></mrow><annotation encoding='application/x-tex'>S^0 \hookrightarrow S^4</annotation></semantics></math></p>
 </li>
 
 <li>
@@ -492,7 +500,7 @@ margin-left: 0em;
 <li id='FelixOpreaTanre08'><a class='existingWikiWord' href='/nlab/show/Yves+F%C3%A9lix'>Yves Félix</a>, John Oprea, Daniel Tanré, <em>Algebraic Models in Geometry</em>, Oxford University Press 2008</li>
 </ul>
 
-<p>The subgroups of <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>SO(8)</a> which act freely on <math class='maruku-mathml' display='inline' id='mathml_ac4efcb15d56b84c29437007f750f3e09f8518c6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>7</mn></msup></mrow><annotation encoding='application/x-tex'>S^7</annotation></semantics></math> have been classified in</p>
+<p>The subgroups of <a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>SO(8)</a> which act freely on <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>7</mn></msup></mrow><annotation encoding='application/x-tex'>S^7</annotation></semantics></math> have been classified in</p>
 
 <ul>
 <li id='Wolf74'><a class='existingWikiWord' href='/nlab/show/Joseph+Wolf'>Joseph Wolf</a>, <em>Spaces of constant curvature</em>, Publish or Perish, Boston, Third ed., 1974</li>
@@ -504,7 +512,7 @@ margin-left: 0em;
 <li id='Gadhia07'><a class='existingWikiWord' href='/nlab/show/Sunil+Gadhia'>Sunil Gadhia</a>, <em>Supersymmetric quotients of M-theory and supergravity backgrounds</em>, PhD thesis, School of Mathematics, University of Edinburgh, 2007 (<a href='http://inspirehep.net/record/1393845/'>spire:1393845</a>)</li>
 </ul>
 
-<p>Further discussion of these actions of <math class='maruku-mathml' display='inline' id='mathml_ac4efcb15d56b84c29437007f750f3e09f8518c6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>8</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Spin(8)</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/7-sphere'>7-sphere</a> is in</p>
+<p>Further discussion of these actions of <math class='maruku-mathml' display='inline' id='mathml_ad99828cb557687ec547fc8434a32fce1dd2a355_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Spin</mi><mo stretchy='false'>(</mo><mn>8</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Spin(8)</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/7-sphere'>7-sphere</a> is in</p>
 
 <ul>
 <li id='MFFGME09'>
@@ -528,18 +536,22 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on April 24, 2018 at 08:51:29.
+  Last revised on April 24, 2018 at 10:52:38.
   See the <a href="https://ncatlab.org/nlab/history/group actions on spheres" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/group+actions+on+spheres" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/group+actions+on+spheres" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/group+actions+on+spheres/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/group+actions+on+spheres" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/group+actions+on+spheres" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/group actions on spheres/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
