--- a/pages/19403.html
+++ b/pages/19403.html
@@ -310,7 +310,7 @@ margin-left: 0em;
 <li><a href='https://en.wikipedia.org/wiki/Wilhelm_Killing'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_2e4de2d8f51e0a5a4c74813eba2eebf21f5ca64d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_95ae8d69ca30693dd134ae82751d6dbb48883090_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -318,7 +318,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class='newWikiWord'>Clifford-Klein space form<a href='/nlab/new/Clifford-Klein+space+form'>?</a></span></p>
+<p><a class='existingWikiWord' href='/nlab/show/Clifford-Klein+space+form'>Clifford-Klein space form</a></p>
 </li>
 </ul>
 
@@ -327,14 +327,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on April 24, 2018 at 09:47:06.
+  Last revised on April 24, 2018 at 10:22:08.
   See the <a href="https://ncatlab.org/nlab/history/Wilhelm Killing" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wilhelm+Killing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Wilhelm+Killing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wilhelm+Killing/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Wilhelm+Killing" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wilhelm+Killing" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wilhelm Killing/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
