--- a/pages/673.html
+++ b/pages/673.html
@@ -395,11 +395,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_74abbe73b8f0e2a764db0445d7416ddeae945e24_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_a75882028cfec58dea5b8ce9ac08c27b857cf860_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_74abbe73b8f0e2a764db0445d7416ddeae945e24_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_a75882028cfec58dea5b8ce9ac08c27b857cf860_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -438,6 +438,10 @@ margin-left: 0em;
 <h2 id='selected_talks'>Selected Talks</h2>
 
 <ul>
+<li>
+<p><em>The stack of smooth maps from a manifold to a differentiable stack is differentiable</em>, <a href='https://cgp.ibs.re.kr/conferences/Topology_in_Australia_and_South_Korea/'>Topology in Australia and South Korea</a>, POSTECH. 23 April 2018.</p>
+</li>
+
 <li>
 <p><em>Constructions in lower dimensional higher geometry</em>, <a href='http://iga.adelaide.edu.au/workshops/MKM60/'>Gauge theory and higher geometry</a>, University of Adelaide. 29 November 2017.</p>
 </li>
@@ -513,16 +517,16 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  7, 2018 04:03:47
-  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (218.215.39.13).
-  See <a href="https://ncatlab.org/nlab/author/David Roberts" style="color: #005c19">Author — David Roberts</a> for an overview of the nLab pages to which David Roberts has contributed.
+  <p>
+  Last revised on April 24, 2018 at 23:15:50.
+  See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/150" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(150 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/151" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(151 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/David+Roberts" accesskey="p" id="view_print" rel="nofollow">Print</a>
